[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/BarTextureButton.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/whitespace.png" type="Texture" id=2]

[node name="BarTextureButton" type="Control"]
margin_right = 64.0
margin_bottom = 64.0
script = ExtResource( 1 )
texture = ExtResource( 2 )
highlight_color = Color( 0.243137, 0.129412, 0.129412, 1 )
pressed_color = Color( 0.227451, 0.270588, 0.301961, 1 )

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Texture" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
enabled_focus_mode = 0
expand = true

[connection signal="mouse_entered" from="Texture" to="." method="_on_Texture_mouse_entered"]
[connection signal="mouse_exited" from="Texture" to="." method="_on_Texture_mouse_exited"]
[connection signal="pressed" from="Texture" to="." method="_on_Texture_pressed"]
